<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="gps_checking"
        android:title="@string/pref_title_check_gps" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="Radius">

    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="200"
        android:dependency="gps_checking"
        android:key="gps_radius"
        android:title="@string/pref_title_radius" />

    <PreferenceCategory android:title="Location">

    </PreferenceCategory>
    <Preference android:title="Map selection"
        android:key="@string/map_button"
        android:dependency="gps_checking"
        android:summary="Select location from map"
        android:icon="@android:drawable/ic_menu_compass" />

    <EditTextPreference
        android:defaultValue="50.210"
        android:dependency="gps_checking"
        android:key="gps_latitude"
        android:title="@string/pref_title_latitude" />
    <EditTextPreference
        android:defaultValue="15.825"
        android:dependency="gps_checking"
        android:key="gps_longitude"
        android:title="@string/pref_title_longitude" />

</PreferenceScreen>
